--- a/verilog_class_exercises.qsf
+++ b/verilog_class_exercises.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M50DAF484C7G
-set_global_assignment -name TOP_LEVEL_ENTITY HEX7segDEC
+set_global_assignment -name TOP_LEVEL_ENTITY SUM
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "08:21:58  APRIL 05, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Standard Edition"
@@ -51,22 +51,6 @@ set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VERILOG_FILE fulladder.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE fulladder.vwf
-set_global_assignment -name VERILOG_FILE HA.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE HA.vwf
-set_global_assignment -name VERILOG_FILE FA.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE FA.vwf
-set_global_assignment -name VERILOG_FILE FA_B.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE FA_B.vwf
-set_global_assignment -name VERILOG_FILE OR2_v1.v
-set_global_assignment -name VERILOG_FILE decoder_2_4.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE decoder_2_4.vwf
-set_global_assignment -name VERILOG_FILE decoder_2_4_B.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE decoder_2_4_B.vwf
-set_global_assignment -name VERILOG_FILE decoder_3_8_B.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE decoder_3_8_B.vwf
-set_global_assignment -name VERILOG_FILE HEX7segDEC.v
 set_location_assignment PIN_N5 -to ADC_CLK_10
 set_location_assignment PIN_P11 -to MAX10_CLK1_50
 set_location_assignment PIN_N14 -to MAX10_CLK2_50
@@ -259,4 +243,27 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity D
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE "C:/Users/OMEN/Antonius/Projects/HLS/HLS_2/solution1/syn/verilog/SUM.v"
+set_global_assignment -name VERILOG_FILE "C:/Users/OMEN/Antonius/Projects/HLS/HLS_4/solution1/syn/verilog/MulAdd.v"
+set_global_assignment -name VERILOG_FILE fulladder.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE fulladder.vwf
+set_global_assignment -name VERILOG_FILE HA.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE HA.vwf
+set_global_assignment -name VERILOG_FILE FA.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE FA.vwf
+set_global_assignment -name VERILOG_FILE FA_B.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE FA_B.vwf
+set_global_assignment -name VERILOG_FILE OR2_v1.v
+set_global_assignment -name VERILOG_FILE decoder_2_4.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE decoder_2_4.vwf
+set_global_assignment -name VERILOG_FILE decoder_2_4_B.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE decoder_2_4_B.vwf
+set_global_assignment -name VERILOG_FILE decoder_3_8_B.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE decoder_3_8_B.vwf
+set_global_assignment -name VERILOG_FILE HEX7segDEC.v
+set_global_assignment -name VERILOG_FILE dec2to4_v1.v
+set_global_assignment -name VERILOG_FILE SUM2.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE SUM2.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE MulAdd.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE SUM.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
