--- a/verilog_class_exercises.qsf
+++ b/verilog_class_exercises.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M50DAF484C7G
-set_global_assignment -name TOP_LEVEL_ENTITY SUM
+set_global_assignment -name TOP_LEVEL_ENTITY adder16
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "08:21:58  APRIL 05, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Standard Edition"
@@ -240,9 +240,6 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -entity DE10_LITE_Gold
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -entity DE10_LITE_Golden_Top -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -entity DE10_LITE_Golden_Top -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity DE10_LITE_Golden_Top -section_id Top
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VERILOG_FILE "C:/Users/OMEN/Antonius/Projects/HLS/HLS_2/solution1/syn/verilog/SUM.v"
 set_global_assignment -name VERILOG_FILE "C:/Users/OMEN/Antonius/Projects/HLS/HLS_4/solution1/syn/verilog/MulAdd.v"
 set_global_assignment -name VERILOG_FILE fulladder.v
@@ -266,4 +263,8 @@ set_global_assignment -name VERILOG_FILE SUM2.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE SUM2.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE MulAdd.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE SUM.vwf
+set_global_assignment -name VERILOG_FILE adder16.v
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
